Make sure all the inner wrapper children are vertically aligned center

--- a/components/input/theme.css
+++ b/components/input/theme.css
@@ -186,6 +186,7 @@
 }
 
 .input-inner-wrapper {
+  align-items: center;
   display: flex;
   flex: 1;
   position: relative;
